<resources>
    <string name="app_name">Modern Book Library</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bottom_menu_home_button_label">Home</string>
    <string name="bottom_menu_search_button_label">Search</string>
    <string name="bottom_menu_favorites_button_label">Favorites</string>
    <string name="bottom_menu_profile_button_label">Profile</string>
    <string name="search_text_input_hint">Type here a title, an author or a keyword</string>
    <string name="favorites_filter_fab_label">Filters</string>
    <string name="book_publication_date_label_text">Publication date:</string>
    <string name="book_number_of_pages_label_text">Number of pages:</string>
    <string name="book_rating_label_text">Rating:</string>
    <string name="book_isbn_10_label_text">ISBN-10:</string>
    <string name="book_isbn_13_label_text">ISBN-13:</string>
    <string name="profile_authorisation_button_text">Authorisation/Registration</string>
    <string name="book_author_label_text">Authors:</string>
    <string name="book_publisher_label_text">Publisher:</string>
    <string name="retry_string">Retry</string>
    <string name="main_title_about_addition">books about</string>
    <string name="main_title_about_cpp">books about c++</string>
    <string name="main_title_about_csharp">books about c#</string>
    <string name="error_fragment_arguments_is_null_message">Fragment arguments is null</string>
    <string name="wrong_activity_error_message">This activity isn\'t MainScreenController</string>
    <string name="book_description_label">book description</string>
    <string name="network_connection_error_message">Please check your network connection</string>
    <string name="free_downloads_label_text">Free downloads:</string>
    <string name="sign_in_with_google_button_title">Sign in with Google</string>
    <string name="anonymous_label">Anonymous</string>
    <string name="sing_in_tip_text">Please sign in for saving your favorite books to the cloud</string>
    <string name="profile_sign_out_button_label">Sign out</string>
</resources>