<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/bottomMenuMainScreenButton"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_home_24"
        android:menuCategory="secondary"
        android:title="@string/bottom_menu_home_button_label" />

    <item
        android:id="@+id/bottomMenuSearchScreenButton"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_search_24"
        android:menuCategory="secondary"
        android:title="@string/bottom_menu_search_button_label" />
    <item
        android:id="@+id/bottomMenuFavoritesScreenButton"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:menuCategory="secondary"
        android:title="@string/bottom_menu_favorites_button_label" />

    <item
        android:id="@+id/bottomMenuProfileScreenButton"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:menuCategory="secondary"
        android:title="@string/bottom_menu_profile_button_label" />
</menu>