<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_bottom_navigation"
    app:startDestination="@id/bottomMenuMainScreenButton">

    <fragment
        android:id="@+id/bottomMenuMainScreenButton"
        android:name="gu_android_team.modernbooklibrary.ui.mainscreen.MainScreenFragment"
        android:label="@string/bottom_menu_home_button_label"
        tools:layout="@layout/fragment_main_screen" />

    <fragment
        android:id="@+id/bottomMenuSearchScreenButton"
        android:name="gu_android_team.modernbooklibrary.ui.searchscreen.SearchScreenFragment"
        android:label="@string/bottom_menu_search_button_label"
        tools:layout="@layout/fragment_search_screen" />

    <fragment
        android:id="@+id/bottomMenuFavoritesScreenButton"
        android:name="gu_android_team.modernbooklibrary.ui.favoritesscreen.FavoritesScreenFragment"
        android:label="@string/bottom_menu_favorites_button_label"
        tools:layout="@layout/fragment_favorites_screen" />

    <fragment
        android:id="@+id/bottomMenuProfileScreenButton"
        android:name="gu_android_team.modernbooklibrary.ui.profilescreen.ProfileScreenFragment"
        android:label="@string/bottom_menu_profile_button_label"
        tools:layout="@layout/fragment_profile_screen" />

    <fragment
        android:id="@+id/bookDescriptionScreen"
        android:name="gu_android_team.modernbooklibrary.ui.bookdescriptionscreen.BookDescriptionFragment"
        android:label="@string/book_description_label"
        tools:layout="@layout/fragment_book_description" />

    <fragment
        android:id="@+id/bookReaderScreen"
        android:name="gu_android_team.modernbooklibrary.ui.bookreaderscreen.BookReaderFragment"
        android:label="BookReader"
        tools:layout="@layout/fragment_book_reader" />
</navigation>